fixes extension issue

--- a/Y2-pcn-lab-stats-qq.qmd
+++ b/Y2-pcn-lab-stats-qq.qmd
@@ -6,7 +6,7 @@ date-format: iso
 format: 
   html: default
 output-file: "index"
-output-ext: .html
+output-ext: html
 self-contained: true
 embed-resources: true
 toc: true
